Hide overflow to stop display spill.

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
     margin: 18px 0px;
     transition: 1s;
     box-shadow: inset 0px 0px 20px 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
 /* Dark theme */
